WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194963
ProcessSwap.PageOverlayLayerPersistence fails on iOS and in debug builds
https://bugs.webkit.org/show_bug.cgi?id=194963
Summary
ProcessSwap.PageOverlayLayerPersistence fails on iOS and in debug builds
Tim Horton
Reported
2019-02-22 15:58:30 PST
ProcessSwap.PageOverlayLayerPersistence fails on iOS and in debug builds
Attachments
Patch
(8.78 KB, patch)
2019-02-22 15:58 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-02-22 15:58:49 PST
Created
attachment 362774
[details]
Patch
WebKit Commit Bot
Comment 2
2019-02-22 18:38:08 PST
Comment on
attachment 362774
[details]
Patch Clearing flags on attachment: 362774 Committed
r241978
: <
https://trac.webkit.org/changeset/241978
>
WebKit Commit Bot
Comment 3
2019-02-22 18:38:09 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-02-22 19:08:31 PST
<
rdar://problem/48332966
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug